# Analysis

AIDA_POC/Current/: Analysis.cxx
AIDA_POC/Current/Example_With_Systematics/: Fit.config  Fit2.config
AIDA_POC/Current/Example_With_Systematics/AIDA/: Pruning.root  PruningText.txt
AIDA_POC/Current/Example_With_Systematics/AIDA/Fits/: AIDA.txt
AIDA_POC/Current/Example_With_Systematics/Input/: Histograms_Jets.root
AIDA_POC/Current/First_Fit/: Example.config
AIDA_POC/Current/First_Fit/Inputs/: data.root  sig.root
AIDA_POC/Current/First_Fit/TestFit/: Pruning.root  PruningText.txt
AIDA_POC/Graveyard/: AIDA.cxx  AIDA_Improved.C  AIDA_Read_Data.C  AIDA_TChain.C  Sample.cxx
GraphNeuralNetwork/: CourseLinks.txt  DGL.py  GCN.py  LGNN.py
GraphNeuralNetwork/DGL_Attempts/: GCN.py  RGCN.py
GraphNeuralNetwork/ExampleCode/GraphNeural/PythonImplementation/: IO.py  Main.ipynb  Main.py  PyGeometric_Function.py  TempMain.ipynb
GraphNeuralNetwork/ExampleCode/GraphNeural/data/: W_to_lepton.root
GraphNeuralNetwork/ExampleCode/GraphNeural/source/: CMakeLists.txt
GraphNeuralNetwork/ExampleCode/GraphNeural/source/GraphNeural/: GraphNetwork.h  IO.h  Particle_Functions.h  PyGeometric_Functions.h  PyTorch_Functions.h  UnitTests.h
GraphNeuralNetwork/ExampleCode/GraphNeural/source/Root/: GraphNetwork.cxx  IO.cxx  Particle_Functions.cxx  PyGeometric_Functions.cxx  PyTorch_Functions.cxx  UnitTests.cxx
GraphNeuralNetwork/ExampleCode/GraphNeural/source/util/: GraphNeural.cxx
GraphNeuralNetwork/NTuples/: BB_MuMu-evtgen.root
(+69 files in other folders)
